--- a/index.html
+++ b/index.html
@@ -5,9 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="dist/app.css">
-  <title>Document</title>
+  <title>Teambit</title>
 </head>
 <body>
-<h1>pippo</h1>
+  <!-- container principale -->
+  <div class="container">
+    <!-- header -->
+    <header>
+      <div class="navbar">
+        <h1>pippo</h1>
+      </div>
+    </header>
+    <!-- /header -->
+    <!-- main -->
+    <main>
+
+    </main>
+    <!-- /main -->
+    <!-- footer -->
+    <footer>
+
+    </footer>
+    <!-- /footer -->
+  </div>
+  <!-- /container principale -->
+</body>
 <script src="dist/app.js" charset="utf-8"></script>
 </html>
