--- a/index.html
+++ b/index.html
@@ -13,7 +13,18 @@
     <!-- header -->
     <header>
       <div class="navbar">
-        <h1>pippo</h1>
+        <div class="logo">
+
+        </div>
+        <div class="menu">
+          <ul class="navbar_top">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li class="sign_up">button</li>
+          </ul>
+        </div>
       </div>
     </header>
     <!-- /header -->
