--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <header>
       <div class="navbar">
         <div class="logo">
-
+          <img src="img/logo.svg" alt="logo">
         </div>
         <div class="menu">
           <ul class="navbar_top">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li class="sign_up">button</li>
+            <li><a href="#">Solutions</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Sing in</a></li>
+            <li class="sign_up"><button>Sign Up</button></li>
           </ul>
         </div>
       </div>
