--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="#">Pricing</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Sing in</a></li>
-            <li class="sign_up"><button><img src="img/1200px-Google__G__Logo.svg.png" alt="google logo">Sign Up</button></li>
+            <li class="sign_up"><button>Sign Up</button></li>
           </ul>
         </div>
       </div>
