ora legge i mixin

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="#">Pricing</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Sing in</a></li>
-            <li class="sign_up"><button>Sign Up</button></li>
+            <li class="btn"><a href="#">Sing up</a></li>
           </ul>
         </div>
       </div>
