--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
   <link rel="stylesheet" href="dist/app.css">
   <title>Teambit</title>
 </head>
@@ -12,20 +13,28 @@
   <div class="container">
     <!-- header -->
     <header>
-      <div class="navbar">
-        <div class="logo">
-          <img src="img/logo.svg" alt="logo">
+      <!-- wrapper -->
+      <section class="wrapper">
+        <div class="navbar">
+          <!-- logo -->
+          <div class="logo">
+            <img src="img/logo.svg" alt="logo">
+          </div>
+          <!-- /logo -->
+          <!-- menu -->
+          <div class="menu">
+            <ul class="navbar_top">
+              <li><a href="#">Solutions</a></li>
+              <li><a href="#">Pricing</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Sing in</a></li>
+              <li class="btn"><a href="#">Sing up</a></li>
+            </ul>
+          </div>
+          <!-- /menu -->
         </div>
-        <div class="menu">
-          <ul class="navbar_top">
-            <li><a href="#">Solutions</a></li>
-            <li><a href="#">Pricing</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Sing in</a></li>
-            <li class="btn"><a href="#">Sing up</a></li>
-          </ul>
-        </div>
-      </div>
+      </section>
+      <!-- /wrapper -->
     </header>
     <!-- /header -->
     <!-- main -->
