--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <!-- menu -->
           <div class="menu">
             <ul class="navbar_top">
-              <li><a href="#">Solutions</a></li>
+              <li><a href="#">Solutions <i class="fas fa-chevron-down"></i></a></li>
               <li><a href="#">Pricing</a></li>
               <li><a href="#">Blog</a></li>
               <li><a href="#">Sing in</a></li>
