--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </g>
             </svg></span><a href="#">Sing up with Google</a>
             </button>
-            <span class="or">or</span>
+            <span>or</span>
             <button class="button_jumbotron" type="button" name="button">
               <img class="slack"src="https://seeklogo.com/images/S/slack-logo-DE4445077C-seeklogo.com.png" alt="slack">Sign up with Slack
             </button>
