--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <path class= "google-color" fill="#4285F4" d="M9.162 7.482h7.65c.254 1.402.197 2.865-.205 4.238-.372 1.256-1.076 2.423-2.06 3.31l-2.583-1.968c.852-.562 1.456-1.47 1.626-2.466H9.157c.005-1.038.005-2.076.005-3.114z"></path>
                     <path class= "google-color" fill="#34A853" d="M1.896 12.56c.888-.673 1.775-1.35 2.662-2.03.34.984.997 1.854 1.863 2.45.55.374 1.17.64 1.81.77.64.127 1.3.11 1.95.003.64-.112 1.26-.34 1.79-.695l2.59 1.97c-.93.844-2.1 1.42-3.33 1.697-1.36.305-2.8.314-4.16-.042-1.07-.28-2.08-.78-2.95-1.463-.91-.712-1.67-1.63-2.2-2.66z"></path>
                 </g>
-            </svg></span><a href="#">Sing up with Google</a>
+            </svg></span>Sing up with Google
             </button>
             <span>or</span>
             <button class="button_jumbotron" type="button" name="button">
