--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             Understand, recognize <br> and develop your <br> people
           </h2>
           <p class="p_header_bottom">
-            Teambit helps teams create a high performing culture with regular feedback.
+            Teambit helps teams create a high performing <br> culture with regular feedback.
           </p>
           <div class="buttons">
             <button class="button_jumbotron" type="button" name="button">
